# SimpleBayesNet

./: .gitignore  README.md  model.json  pyproject.toml
.github/workflows/: python-app.yml
src/main/: bayesnet.py  preprocess.py  testingtests.py
tests/: model.json  test_inference.py  test_loading_saving_model.py  test_pom_version.py  test_structure_and_data.py  test_version.py
