[tool.poetry]
name = "main"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "main", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
pomegranate = "^1.0.0"
pygraphviz = "^1.10"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
