[tool.poetry]
name = "main"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "main", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8.1"
pomegranate = "0.14.8"
pygraphviz = "^1.10"
pytest = "^7.3.1"
pandas = "^2.0.1"
deepdiff = "^6.3.0"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core>=1.0.0a6", "setuptools>=46.0.0"]
build-backend = "poetry.core.masonry.api"
